--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,13 @@
 {
     "name": "ineersa/converter",
-    "description": "Currency converter for ECB",
+    "description": "Currency converter",
     "type": "dev",
     "require": {
+        "php": ">=5.4.0",
         "guzzlehttp/guzzle": "^6.1"
     },
     "require-dev": {
+        "php": ">=5.4.0",
         "guzzlehttp/guzzle": "^6.1"
     },
     "authors": [
